--- a/style.css
+++ b/style.css
@@ -44,3 +44,12 @@ body{
     word-wrap: break-word;
     word-break: break-all;
 }
+.output .previous-operand{
+    color: rgba(255, g255, 255, .75);
+    font-size: 1.5rem;
+}
+
+.output .current-operand{
+    color: white;
+    font-size: 2.5rem;
+}
