i have added buttons to the script

--- a/style.css
+++ b/style.css
@@ -40,12 +40,12 @@ body{
     align-items: flex-end;
     justify-content: space-around;
     flex-direction: column;
-    padding: 50px;
+    padding: 20px;
     word-wrap: break-word;
     word-break: break-all;
 }
 .output .previous-operand{
-    color: rgba(255, g255, 255, .75);
+    color: rgba(255, 255, 255, .75);
     font-size: 1.5rem;
 }
 
